GridView text now overflows correctly and breaks

--- a/src/app/routes/files/components/document/document.component.scss
+++ b/src/app/routes/files/components/document/document.component.scss
@@ -25,3 +25,10 @@
   }
 }
 
+.text {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  margin: 0 4px;
+}
+
